--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                       </button>
-                      <a style="font-size: 4em; color: white; font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;" class="page-scroll" href="index.html">TOLU</a>
+                      <a style="font-size: 4em; color: white; font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;" class="page-scroll" href="index.html">KEMI</a>
                     </div>
 
                     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -109,7 +109,7 @@
 								<a class="btn btn-blank" href="#contact-section" role="button">Contact us</a>
 							</div>
 							<div class="item">
-								<h1>I'm TOLU</h1>
+								<h1>I'm KEMI</h1>
 								<p>I'm a graphics designer</p>
 								<div class="extra-space-l"></div>
 								<a class="btn btn-blank" href="#about-section" role="button">About me</a>
@@ -148,7 +148,7 @@
                                     <span class="rotate-box-icon"><i class="fa fa-users"></i></span>
                                     <div class="rotate-box-info">
                                         <h4>Who am i?</h4>
-                                        <p>My name is Tolu. I design amazing graphics for a living. I am based in Lagos, Nigeria. </p>
+                                        <p>My name is KEMI. I design amazing graphics for a living. I am based in Lagos, Nigeria. </p>
                                     </div>
                                 </a>
                             </div>
@@ -339,14 +339,14 @@
                                 </div>
                                 <div class="item">
                                     <blockquote>
-                                        <p>"His ability to create perfection from very minute details given to him surprises me. He is the guy you should call when you need nice graphics."</p>
+                                        <p>"Her ability to create perfection from very minute details given to her surprises me. She is the lady you should call when you need nice graphics."</p>
                                         <footer><cite title="Source Title">Ogundare Victor</cite></footer>
                                     </blockquote>
                                 </div>
                                 <div class="item">
                                     <blockquote>
-                                        <p>"I am always amazed by the great designs he comes up with even when given very limited time".</p>
-                                        <footer><cite title="Source Title">Olatunde Oluwakemi</cite></footer>
+                                        <p>"I am always amazed by the great designs she comes up with even when given very limited time".</p>
+                                        <footer><cite title="Source Title">Olatunde Samson</cite></footer>
                                     </blockquote>
                                 </div>
                             </div>
@@ -768,9 +768,9 @@
                                     <h4>Our Address</h4>
                                     <ul class="contact-address">
 			                            <li><i class="fa fa-map-marker fa-lg"></i>&nbsp; 68, Agbebi street Ijeshatedo, Surulere, Lagos</li>
-			                            <li><i class="fa fa-phone"></i>&nbsp; +2348108520808</li>
+			                            <li><i class="fa fa-phone"></i>&nbsp; +2347026388952</li>
 			                            <li><i class="fa fa-print"></i>&nbsp; +2348088919594</li>
-			                            <li><i class="fa fa-envelope"></i>olatundesamson21@gmail.com</li>
+			                            <li><i class="fa fa-envelope"></i>rachaeloluwakemi255@gmail.com</li>
 			                        </ul>
                                 </div>
                             </div>
